Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-24656

Wrong selection foreground color for syntax highlighting

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 4.13.0, Qt Creator 4.13.1
    • Editors
    • None
    • Ubuntu 16.04 with Gnome
    • Linux/X11
    • d99e00c49f8b15f05225d4fa160e8ed94026a83f (qt-creator/qt-creator/4.13)

      The selection foreground colors in any editors was broken when it didn't set in Color Scheme (onedark.xml).

       

      QtCreator 4.12.4:

      QtCreator 4.13.1:

        1. onedark.xml
          4 kB
          Ivan Sidorov
        2. Screenshot from 2020-09-18 09-39-47.png
          49 kB
          Ivan Sidorov
        3. Screenshot from 2020-09-18 09-40-32.png
          47 kB
          Ivan Sidorov
        For Gerrit Dashboard: QTCREATORBUG-24656
        # Subject Branch Project Status CR V

            davschul David Schulz
            iohanaan Ivan Sidorov
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes