TextEditor: allow highlightings in selections

If the selection foregound color is undefined do not overwrite the
already applied highlighting.

Fixes: QTCREATORBUG-24656
Change-Id: Ia125e8e6b9efba73d5a13facc2446a793d59f5c3
Reviewed-by: Christian Stenger <christian.stenger@qt.io>